Corrige alguns bugs

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,9 @@
+/Corpo.class
+/Fruta.class
+/Inicializador.class
+/Main.class
+/Painel.class
 /comum.png
 /kitty.png
 /star.png
+/Inicializador$1.class
