Implementa modo de atravessar paredes

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -7,3 +7,8 @@
 /comum.png
 /kitty.png
 /star.png
+/Inicializador$2.class
+/Inicializador$3.class
+/Inicializador$4.class
+/Inicializador$5.class
+/Inicializador$6.class
